src/Editor/Ghost.DSL/ShaderParser/Generated/GhostComputeShaderParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar/GhostComputeShaderParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class GhostComputeShaderParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SHADER=1, COMPUTE=2, PIPELINE=3, PASS=4, DEFINES=5, INCLUDES=6, PROPERTIES=7, 
		PAYLOAD=8, HLSL=9, SM=10, LBRACE=11, RBRACE=12, LPAREN=13, RPAREN=14, 
		LBRACK=15, RBRACK=16, SEMICOLON=17, COMMA=18, EQUALS=19, COLON=20, STRING_LITERAL=21, 
		NUMBER=22, IDENTIFIER=23, WS=24, LINE_COMMENT=25, BLOCK_COMMENT=26, ANY_CHAR=27;
	public const int
		RULE_computeFile = 0, RULE_compute = 1, RULE_computeBody = 2, RULE_shaderModel = 3, 
		RULE_propertiesBlock = 4, RULE_propertyStatement = 5, RULE_propertyDefaultValue = 6, 
		RULE_propertyDefaultArguments = 7, RULE_propertyDefaultArgument = 8, RULE_definesBlock = 9, 
		RULE_defineStatement = 10, RULE_includesBlock = 11, RULE_includeStatement = 12, 
		RULE_hlslBlock = 13, RULE_hlslBody = 14, RULE_computeEntry = 15, RULE_functionCall = 16, 
		RULE_functionArguments = 17, RULE_functionArgument = 18;
	public static readonly string[] ruleNames = {
		"computeFile", "compute", "computeBody", "shaderModel", "propertiesBlock", 
		"propertyStatement", "propertyDefaultValue", "propertyDefaultArguments", 
		"propertyDefaultArgument", "definesBlock", "defineStatement", "includesBlock", 
		"includeStatement", "hlslBlock", "hlslBody", "computeEntry", "functionCall", 
		"functionArguments", "functionArgument"
	};

	private static readonly string[] _LiteralNames = {
		null, "'shader'", "'compute'", "'pipeline'", "'pass'", "'defines'", "'includes'", 
		"'properties'", "'payload'", "'hlsl'", "'sm'", "'{'", "'}'", "'('", "')'", 
		"'['", "']'", "';'", "','", "'='", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SHADER", "COMPUTE", "PIPELINE", "PASS", "DEFINES", "INCLUDES", 
		"PROPERTIES", "PAYLOAD", "HLSL", "SM", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
		"LBRACK", "RBRACK", "SEMICOLON", "COMMA", "EQUALS", "COLON", "STRING_LITERAL", 
		"NUMBER", "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "ANY_CHAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GhostComputeShaderParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GhostComputeShaderParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GhostComputeShaderParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GhostComputeShaderParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ComputeFileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GhostComputeShaderParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ComputeContext[] compute() {
			return GetRuleContexts<ComputeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComputeContext compute(int i) {
			return GetRuleContext<ComputeContext>(i);
		}
		public ComputeFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_computeFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComputeFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComputeFileContext computeFile() {
		ComputeFileContext _localctx = new ComputeFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_computeFile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 38;
				compute();
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==COMPUTE );
			State = 43;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComputeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMPUTE() { return GetToken(GhostComputeShaderParser.COMPUTE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(GhostComputeShaderParser.STRING_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(GhostComputeShaderParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ComputeBodyContext computeBody() {
			return GetRuleContext<ComputeBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(GhostComputeShaderParser.RBRACE, 0); }
		public ComputeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compute; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompute(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComputeContext compute() {
		ComputeContext _localctx = new ComputeContext(Context, State);
		EnterRule(_localctx, 2, RULE_compute);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			Match(COMPUTE);
			State = 46;
			Match(STRING_LITERAL);
			State = 47;
			Match(LBRACE);
			State = 48;
			computeBody();
			State = 49;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComputeBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ShaderModelContext shaderModel() {
			return GetRuleContext<ShaderModelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertiesBlockContext[] propertiesBlock() {
			return GetRuleContexts<PropertiesBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertiesBlockContext propertiesBlock(int i) {
			return GetRuleContext<PropertiesBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefinesBlockContext[] definesBlock() {
			return GetRuleContexts<DefinesBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefinesBlockContext definesBlock(int i) {
			return GetRuleContext<DefinesBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludesBlockContext[] includesBlock() {
			return GetRuleContexts<IncludesBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludesBlockContext includesBlock(int i) {
			return GetRuleContext<IncludesBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HlslBlockContext[] hlslBlock() {
			return GetRuleContexts<HlslBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HlslBlockContext hlslBlock(int i) {
			return GetRuleContext<HlslBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComputeEntryContext[] computeEntry() {
			return GetRuleContexts<ComputeEntryContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComputeEntryContext computeEntry(int i) {
			return GetRuleContext<ComputeEntryContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext[] functionCall() {
			return GetRuleContexts<FunctionCallContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext functionCall(int i) {
			return GetRuleContext<FunctionCallContext>(i);
		}
		public ComputeBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_computeBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComputeBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComputeBodyContext computeBody() {
		ComputeBodyContext _localctx = new ComputeBodyContext(Context, State);
		EnterRule(_localctx, 4, RULE_computeBody);
		int _la;
		try {
			State = 63;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 51;
				shaderModel();
				}
				break;
			case DEFINES:
			case INCLUDES:
			case PROPERTIES:
			case HLSL:
			case RBRACE:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8389344L) != 0)) {
					{
					State = 58;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
					case 1:
						{
						State = 52;
						propertiesBlock();
						}
						break;
					case 2:
						{
						State = 53;
						definesBlock();
						}
						break;
					case 3:
						{
						State = 54;
						includesBlock();
						}
						break;
					case 4:
						{
						State = 55;
						hlslBlock();
						}
						break;
					case 5:
						{
						State = 56;
						computeEntry();
						}
						break;
					case 6:
						{
						State = 57;
						functionCall();
						}
						break;
					}
					}
					State = 62;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderModelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SM() { return GetToken(GhostComputeShaderParser.SM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GhostComputeShaderParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(GhostComputeShaderParser.SEMICOLON, 0); }
		public ShaderModelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderModel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderModel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderModelContext shaderModel() {
		ShaderModelContext _localctx = new ShaderModelContext(Context, State);
		EnterRule(_localctx, 6, RULE_shaderModel);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(SM);
			State = 66;
			Match(IDENTIFIER);
			State = 67;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertiesBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROPERTIES() { return GetToken(GhostComputeShaderParser.PROPERTIES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(GhostComputeShaderParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(GhostComputeShaderParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyStatementContext[] propertyStatement() {
			return GetRuleContexts<PropertyStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyStatementContext propertyStatement(int i) {
			return GetRuleContext<PropertyStatementContext>(i);
		}
		public PropertiesBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertiesBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertiesBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertiesBlockContext propertiesBlock() {
		PropertiesBlockContext _localctx = new PropertiesBlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_propertiesBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			Match(PROPERTIES);
			State = 70;
			Match(LBRACE);
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 71;
				propertyStatement();
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 77;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(GhostComputeShaderParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(GhostComputeShaderParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(GhostComputeShaderParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(GhostComputeShaderParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDefaultValueContext propertyDefaultValue() {
			return GetRuleContext<PropertyDefaultValueContext>(0);
		}
		public PropertyStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyStatementContext propertyStatement() {
		PropertyStatementContext _localctx = new PropertyStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_propertyStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			Match(IDENTIFIER);
			State = 80;
			Match(IDENTIFIER);
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EQUALS) {
				{
				State = 81;
				Match(EQUALS);
				State = 82;
				propertyDefaultValue();
				}
			}

			State = 85;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyDefaultValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GhostComputeShaderParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GhostComputeShaderParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GhostComputeShaderParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDefaultArgumentsContext propertyDefaultArguments() {
			return GetRuleContext<PropertyDefaultArgumentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(GhostComputeShaderParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(GhostComputeShaderParser.STRING_LITERAL, 0); }
		public PropertyDefaultValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyDefaultValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyDefaultValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyDefaultValueContext propertyDefaultValue() {
		PropertyDefaultValueContext _localctx = new PropertyDefaultValueContext(Context, State);
		EnterRule(_localctx, 12, RULE_propertyDefaultValue);
		int _la;
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87;
				Match(IDENTIFIER);
				State = 88;
				Match(LPAREN);
				State = 90;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0)) {
					{
					State = 89;
					propertyDefaultArguments();
					}
				}

				State = 92;
				Match(RPAREN);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				Match(NUMBER);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 94;
				Match(STRING_LITERAL);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 95;
				Match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyDefaultArgumentsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDefaultArgumentContext[] propertyDefaultArgument() {
			return GetRuleContexts<PropertyDefaultArgumentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDefaultArgumentContext propertyDefaultArgument(int i) {
			return GetRuleContext<PropertyDefaultArgumentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(GhostComputeShaderParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(GhostComputeShaderParser.COMMA, i);
		}
		public PropertyDefaultArgumentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyDefaultArguments; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyDefaultArguments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyDefaultArgumentsContext propertyDefaultArguments() {
		PropertyDefaultArgumentsContext _localctx = new PropertyDefaultArgumentsContext(Context, State);
		EnterRule(_localctx, 14, RULE_propertyDefaultArguments);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			propertyDefaultArgument();
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 99;
				Match(COMMA);
				State = 100;
				propertyDefaultArgument();
				}
				}
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyDefaultArgumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(GhostComputeShaderParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GhostComputeShaderParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(GhostComputeShaderParser.STRING_LITERAL, 0); }
		public PropertyDefaultArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyDefaultArgument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyDefaultArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyDefaultArgumentContext propertyDefaultArgument() {
		PropertyDefaultArgumentContext _localctx = new PropertyDefaultArgumentContext(Context, State);
		EnterRule(_localctx, 16, RULE_propertyDefaultArgument);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefinesBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINES() { return GetToken(GhostComputeShaderParser.DEFINES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(GhostComputeShaderParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(GhostComputeShaderParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DefineStatementContext[] defineStatement() {
			return GetRuleContexts<DefineStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefineStatementContext defineStatement(int i) {
			return GetRuleContext<DefineStatementContext>(i);
		}
		public DefinesBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definesBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefinesBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefinesBlockContext definesBlock() {
		DefinesBlockContext _localctx = new DefinesBlockContext(Context, State);
		EnterRule(_localctx, 18, RULE_definesBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			Match(DEFINES);
			State = 109;
			Match(LBRACE);
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 110;
				defineStatement();
				}
				}
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 116;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefineStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GhostComputeShaderParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(GhostComputeShaderParser.SEMICOLON, 0); }
		public DefineStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defineStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostComputeShaderParserVisitor<TResult> typedVisitor = visitor as IGhostComputeShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefineStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefineStatementContext defineStatement() {
		DefineStatementContext _localctx = new DefineStatementContext(Context, State);
		EnterRule(_localctx, 20, RULE_defineStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			Match(IDENTIFIER);
			State = 119;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
